fix footer item opacity
the version was hard to read

--- a/web/assets/css/footer.less
+++ b/web/assets/css/footer.less
@@ -2,12 +2,12 @@
     margin-right: 30px;
     display: flex;
     align-items: center;
-    line-height: 20px;
-    opacity: 0.5;
+    line-height: 35px;
 }
 
 #footer-link {
     .footer-item();
+    opacity: 0.5;
     &:hover {
         opacity: 1;
     }
